--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,35 @@
-<p>dashboard works!</p>
+<mat-sidenav-container class="sidenav-container">
+    <mat-sidenav mode="side" opened>
+      <div class="logo-container">
+        <!-- Add your logo here -->
+      </div>
+      <mat-nav-list>
+        <a mat-list-item *ngFor="let item of navItems" 
+           [routerLink]="[item.path]" 
+           routerLinkActive="active-link" 
+           class="nav-item">
+          <mat-icon>{{item.icon}}</mat-icon>
+          <span>{{item.label}}</span>
+        </a>
+      </mat-nav-list>
+      <div class="user-profile">
+        <img src="assets/user-avatar.jpg" alt="User Avatar" class="user-avatar">
+        <div class="user-info">
+          <span class="user-name">Monica G.</span>
+          <span class="user-role">Administrator</span>
+        </div>
+      </div>
+      <button mat-button class="logout-button" (click)="logout()">
+        <mat-icon>exit_to_app</mat-icon>
+        <span>Cerrar sesión</span>
+      </button>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <mat-toolbar>
+        <span>Dashboard</span>
+      </mat-toolbar>
+      <div class="content">
+        <router-outlet></router-outlet>
+      </div>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
