--- a/frontend/src/app/home/home.component.css
+++ b/frontend/src/app/home/home.component.css
@@ -1,73 +1,127 @@
-/* Establece el fondo de pantalla */
-body {
-  background-image: url('https://wallpapers.com/images/featured-full/minimalist-7xpryajznty61ra3.jpg'); /* Cambia la URL a tu imagen de fondo */
-  background-size: cover;
-  background-position: center;
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(-20px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+html, body {
+  height: 100%;
   margin: 0;
-  font-family: Arial, sans-serif;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(135deg, #87CEEB, #8A2BE2, #0000FF);
 }
 
 .container {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  text-align: center;
-  padding: 20px;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  padding-bottom: 60px;
+  box-sizing: border-box;
 }
 
 .form-container {
-  background: rgba(255, 255, 255, 0.8); /* Blanco con un poco de transparencia */
+  background-color: rgba(24, 20, 20, 0.987);
+  padding: 40px;
   border-radius: 10px;
-  padding: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  backdrop-filter: blur(10px); /* Efecto de desenfoque */
-  max-width: 400px;
+  box-shadow: 0 15px 25px rgba(0,0,0,.6);
   width: 100%;
+  max-width: 400px;
+  text-align: center;
+  animation: fadeIn 1s ease-out;
 }
 
 h1 {
-  margin-bottom: 20px;
+  color: white;
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
 }
 
 input {
   width: 100%;
-  padding: 10px;
-  margin: 10px 0;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  padding: 10px 0;
   font-size: 16px;
+  color: #fff;
+  margin-bottom: 30px;
+  border: none;
+  border-bottom: 1px solid #fff;
+  outline: none;
+  background: transparent;
+}
+
+input::placeholder {
+  color: #a0aec0;
 }
 
 button {
-  width: 100%;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-  background-color: #007bff;
-  color: white;
+  position: relative;
+  display: inline-block;
+  padding: 10px 20px;
+  color: #ffffff;
   font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: .5s;
+  margin-top: 40px;
+  letter-spacing: 4px;
+  background-color: #b7791f;
+  border: none;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #0056b3;
+  background: #03f40f;
+  color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #03f40f,
+              0 0 25px #03f40f,
+              0 0 50px #03f40f,
+              0 0 100px #03f40f;
 }
 
-p {
-  margin-top: 10px;
-  font-size: 16px;
-  color: #333;
+button span {
+  position: absolute;
+  display: block;
+}
+
+@keyframes btn-anim1 {
+  0% {
+    left: -100%;
+  }
+
+  50%, 100% {
+    left: 100%;
+  }
+}
+
+button span:nth-child(1) {
+  bottom: 2px;
+  left: -100%;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg, transparent, #03f40f);
+  animation: btn-anim1 2s linear infinite;
 }
 
 .footer {
-  position: fixed;
+  position: absolute;
   bottom: 0;
+  left: 0;
   width: 100%;
-  text-align: center;
-  padding: 10px;
-  background: rgba(0, 0, 0, 0.7);
+  padding: 1rem;
+  background-color: rgba(44, 55, 77, 0.9);
   color: white;
-  font-size: 14px;
+  text-align: center;
+  height: 60px;
+  box-sizing: border-box;
 }
